Send device identifier in query string